# dds-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
assets/: LICENSE.txt  dxt5.dds
benches/: benchmarks.rs
dds-rs/: Cargo.toml
dds-rs/benches/: benchmarks.rs
dds-rs/src/: lib.rs
dds-rs/tests/: main.rs
dds-utils/: Cargo.toml
dds-utils/src/: dds-convert.rs  dds-generate.rs  dds-info.rs
dds-utils/tests/: main.rs
examples/convert/: LICENSE.txt  main.rs
examples/generate/: main.rs
examples/info/: main.rs
examples/qt/: LICENSE.txt  README.md
src/: lib.rs  main.rs
tests/: main.rs
tests/assets/: dxt1.dds
