[package]
name = "dds-rs"
version = "0.4.0"
authors = ["mechaxl"]
description = "Decodes DirectDraw Surface files"
repository = "https://gitlab.com/mechaxl/dds-rs"
keywords = ["dds", "directdraw"]
categories = ["game-engines", "multimedia::images"]
license = "LGPL-3.0"

[lib]
name = "dds"
path = "src/lib.rs"

[dev-dependencies]
image = "0.12.2"
clap = "2.20.1"
prettytable-rs = "0.6.6"

[[example]]
name = "convert"
path = "examples/convert/main.rs"

[[example]]
name = "info"
path = "examples/info/main.rs"
