[package]
name = "dds-rs"
version = "0.5.2"
authors = ["mechaxl"]
description = "Decodes DirectDraw Surface files"
repository = "https://gitlab.com/mechaxl/dds-rs"
keywords = ["dds", "directdraw"]
categories = ["game-engines", "multimedia::images"]
license = "LGPL-3.0"

[lib]
name = "dds"
path = "src/lib.rs"

[dependencies]
bincode = "0.8"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
image = "0.12.2"
clap = "2.20.1"
prettytable-rs = "0.6.6"

[[example]]
name = "convert"
path = "examples/convert/main.rs"

[[example]]
name = "info"
path = "examples/info/main.rs"

[[example]]
name = "generate"
path = "examples/generate/main.rs"
