[package]
name = "dds-rs"
version = "0.7.0"
authors = ["mechaxl"]
description = "Decodes DirectDraw Surface files"
repository = "https://gitlab.com/mechaxl/dds-rs"
keywords = ["dds", "directdraw"]
categories = ["game-engines", "multimedia::images"]
license = "LGPL-3.0"

[lib]
name = "dds"
path = "src/lib.rs"

[dependencies]
bincode = "0.8"
serde = "1.0"
serde_derive = "1.0"
rgb = "0.8"
