[package]
name = "dds-rs"
version = "0.7.0"
edition = "2018"
authors = ["mechaxl"]
description = "Decodes DirectDraw Surface files"
repository = "https://gitlab.com/mechaxl/dds-rs"
keywords = ["dds", "directdraw"]
categories = ["game-engines", "multimedia::images"]
license = "LGPL-3.0"

[lib]
name = "dds"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["serde/default", "core2/std"]


[dependencies]
bincode = { version = "1.3.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
rgb = "0.8"
core2 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
image = "0.18"
